most of section 2